<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminMainPage"
    android:orientation="vertical"
    android:padding="15dp"
    >


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adminSplash"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#000"
        />

    <Button
        android:id="@+id/addquestionBTN"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:text="@string/addquestionBTN" />

    <Button
        android:id="@+id/viewquestionsBTN"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:text="@string/viewquestionsBTN" />

    <Button
        android:id="@+id/backBTN"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:text="@string/backBTN"
        android:backgroundTint="@color/buttonColor"
        android:textColor="#FFF"
        />
</LinearLayout>